--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,10 @@
 language: ruby
 rvm:
-  - 2.2
-  - 2.0.0-p247
+- 2.6.0
+before_script:
+- bin/rails db:create
+- bin/rails db:migrate
+- bundle exec rake assets:precompile
+before_install:
+- gem update --system
+- gem install bundler
