--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
   "name": "ReciPeeps",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-jest": "^24.8.0",
+    "babel-preset-es2015": "^6.24.1",
+    "jest": "^24.8.0"
+  },
+  "scripts": {
+    "test": "jest"
+  },
+  "jest": {
+    "roots": [
+      "spec/javascript"
+    ]
+  }
 }
