--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,7 @@
 !/log/.keep
 !/tmp/.keep
 
-/coverage/.resultset.json
-/coverage/.resultset.json.lock
+/coverage/
 
 /node_modules
 /yarn-error.log
