--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "ReciPeeps",
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "jquery": "^3.4.1"
+  },
   "devDependencies": {
     "babel-jest": "^24.8.0",
     "babel-preset-es2015": "^6.24.1",
