--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ before_script:
 - bin/rails db:create
 - bin/rails db:migrate
 - bundle exec rake assets:precompile
+- bundle exec rails runner "Webdrivers::Chromedriver.update"
 before_install:
 - gem update --system
 - gem install bundler
+addons:
+  chrome: stable
 deploy:
  run: bin/rails db:migrate
  provider: heroku
