--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 /yarn-error.log
 
 .byebug_history
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
