--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "ReciPeeps",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "^4.0.2",
     "jquery": "^3.4.1"
   },
   "devDependencies": {
     "babel-jest": "^24.8.0",
     "babel-preset-es2015": "^6.24.1",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
     "test": "jest"
