--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@ before_script:
 - bin/rails db:migrate
 - bundle exec rake assets:precompile
 - bundle exec rails runner "Webdrivers::Chromedriver.update"
+sudo: required
 before_install:
-- gem update --system
-- gem install bundler
+  - gem update --system
+  - gem install bundler
+  - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+  - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -qq yarn
+cache:
+  yarn: true
 addons:
   chrome: stable
 deploy:
